# keyhunter

./: README.md  pyproject.toml
docs/: settings.tape
src/k_hunter/: main.py  style.tcss
src/k_hunter/content/: schemas.py  service.py
src/k_hunter/help/: __init__.py  help.md  help_footer.py  help_screen.py
src/k_hunter/profile/: schemas.py  service.py  widgets.py
src/k_hunter/settings/: schemas.py  service.py
src/k_hunter/settings/widgets/: app_settings.py  components.py  content_settings.py  settings_container.py  settings_sidebar.py  typer_settings.py
src/k_hunter/typer/engines/: base_engine.py  single_line_engine.py  standard_engine.py
src/k_hunter/typer/widgets/: __init__.py  simulator.py  typer.py  typer_container.py  typer_hints_label.py  typer_statistic.py
src/keyhunter/: const.py  main.py  style.tcss
src/keyhunter/content/: schemas.py  service.py
src/keyhunter/content/datasets/natural_language/en/books/: alice
src/keyhunter/content/datasets/natural_language/en/common_words/: common_1000
src/keyhunter/content/datasets/natural_language/en/simple_text/: lower  simple
src/keyhunter/content/datasets/natural_language/ru/common_words/: common_1000
src/keyhunter/profile/: schemas.py  service.py  storage.py  widgets.py
src/keyhunter/settings/: commands.py  messages.py  schemas.py  service.py  simulator.py  storage.py  widgets.py
src/keyhunter/settings/widgets/: app_settings.py  components.py  content_settings.py  settings_container.py  settings_sidebar.py  typer_settings.py
src/keyhunter/statistic/: widgets.py
src/keyhunter/typer/: base_engine.py  schemas.py  simulator.py  single_line_engine.py  standard_engine.py  typer.py  widgets.py
