[project]
name = "keyhunter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rivkat Karimov", email = "redscorpion32.rk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "deepmerge>=2.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "textual>=6.1.0",
    "xdg-base-dirs>=6.0.2",
]

[project.scripts]
keyhunter = "keyhunter.main:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]
