[project]
name = "keyhunter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rivkat Karimov", email = "redscorpion32.rk@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "platformdirs>=4.5.1",
    "textual>=7.5.0",
]

[project.scripts]
keyhunter = "keyhunter.main:main"

[build-system]
requires = ["uv_build>=0.9.29,<0.10"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]
