[project]
name = "k-hunter"
version = "0.4.0"
description = "Keyboard typing trainer app "

requires-python = ">=3.10"
dependencies = [
    "platformdirs>=4.5.1",
    "textual>=7.5.0",
]

authors = [
    { name = "Rivkat Karimov", email = "redscorpion32.rk@gmail.com" }
]
license = "MIT"
readme = "README.md"
keywords = ["typing", "trainer", "terminal", "tui", "textual"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/spaghetti-backend/k-hunter"
Repository = "https://github.com/spaghetti-backend/k-hunter"
Issues = "https://github.com/spaghetti-backend/k-hunter/issues"

[project.scripts]
k-hunter = "k_hunter.main:main"

[build-system]
requires = ["uv_build>=0.9.29,<0.10"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]
